<resources>
    <string name="app_name">GoLawyer</string>

    <string name="title_activity_launch_screen">LaunchScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_forgot">Esqueçeu a Senha?</string>
    <string name="name_personal_information">Informações Pessoais</string>
    <string name="name_terms_use">Termos de Uso</string>
    <string name="placeholder_terms_use_first_description">Ao cadastrar-me declaro que li e aceito os</string>
    <string name="placeholder_terms_use_link">termos de uso</string>
    <string name="placeholder_terms_use_privacy_policy_link">política de privacidade</string>
    <string name="placeholder_terms_use_separator">e a</string>
    <string name="placeholder_curriculum">Digite aqui um breve curriculo:*</string>
    <string name="placeholder_radiobutton_agree">Concordo</string>
    <string name="placeholder_radiobutton_disagree">Discordo</string>
    <string name="title_activity_register">Novo Cadastro</string>
    <string name="placeholder_attendance">Atendimentos</string>
    <string name="placeholder_evaluation">Avaliação</string>
    <string name="placeholder_completed">Concluídos</string>
    <string name="placeholder_details_user">Detalhes usuário</string>
    <string name="placeholder_demand">Demanda</string>
    <string name="placeholder_payment">Pagamento</string>
    <string name="placeholder_chat">Chat</string>
    <string name="placeholder_delivery">Entrega</string>
    <string name="placeholder_rate">Avaliação</string>
    <string name="placeholder_forum">Forum</string>
    <string name="placeholder_service_type">Tipo de Serviço</string>
    <string name="placeholder_service_value">Valor do Serviço</string>
    <string name="placeholder_service_delivery">Modo de Envio</string>
    <string name="placeholder_service_propose_total_value">Valor total da proposta:</string>

    <string name="placeholder_credit_card_flag">Bandeira do cartão: </string>
    <string name="placeholder_credit_card_name">Nome do cartão: </string>
    <string name="placeholder_credit_card_number">Número do cartão: </string>
    <string name="placeholder_credit_card_expire_date">Validade do cartão: </string>
    <string name="placeholder_credit_card_cvv">CVV: </string>
    <string name="placeholder_credit_card_cellphone_number">Número do celular: </string>
    <string name="placeholder_edit_profile">Editar</string>
    <string name="placeholder_save_edit_profile">Salvar</string>
    <string name="placeholder_error_connection">Erro de Conexão</string>
    <string name="placeholder_message_dialog">Carregando...</string>
    <string name="placeholder_alert_forgot_positive_button">Enviar</string>
    <string name="placeholder_alert_forgot_negative_button">Cancelar</string>
    <string name="placeholder_alert_forgot_hint">Email</string>
    <string name="title_alert_forgot_password">Digite seu email para recuperar sua senha: </string>
    <string name="placeholder_select_demand">Selecionar demanda</string>
    <string name="placeholder_detail_copy">Detalhe cópia</string>
    <string name="name_radio_button_copy">Cópia</string>
    <string name="name_radio_button_court">Audiência</string>
    <string name="name_radio_button_protocol">Protocolo</string>
    <string name="name_radio_button_distribution">Distribuição</string>
    <string name="name_radio_button_charter">Retirar alvará</string>
    <string name="name_radio_button_certificate">Certidão</string>
    <string name="name_radio_button_others">Outros</string>
    <string name="error_value_proposal">Erro: Campo valor da proposta faltando</string>
    <string name="error_local_proposal">Erro: Campo local faltando</string>
    <string name="error_observation_proposal">Erro: Campo observações faltando</string>


    <string name="accept">Aceitar </string>
    <string name="refuse">Recusar </string>
    <string name="against_proposal">Contra proposta </string>

    <string name="link_terms_use">http://www.golawyer.online/Termos</string>
    <string name="link_privacy_policy">http://www.golawyer.online/Politica</string>

    <string name="name_bottom_bar_map">Mapa</string>
    <string name="name_bottom_bar_service">Solicitações de trabalho</string>
    <string name="name_bottom_bar_profile">Perfil</string>
    <string name="name_activity_detail_evaluation">Avaliações</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="title_activity_edit_profile">Editar perfil</string>
    <string name="permission_gps">O aplicativo precisa da sua permissão para acessar o GPS.</string>
    <string name="permission_gps_accepted">Permitir</string>
    <string name="permission_gps_denied">Não Permitir</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
    </string>
    <string name="placeholder_dialog_message_proposal">Escreva o valor da contra proposta</string>
    <string name="action_settings">Settings</string>
    <string name="camerabutton">cameraButton</string>
    <string name="digite_aqui_sua_mensagem">Digite aqui sua mensagem</string>
    <string name="voc_poder_cancelar_a_demanda_a_qualquer_momento_o_pagamento_ser_extornado_mas_fique_atento_para_n_o_ser_classificado_negativamente">Você poderá cancelar a demanda a qualquer momento, o pagamento será extornado, mas fique atento para não ser classificado negativamente</string>
    <string name="por_favor_aguarde_a_finaliza_o_da_demanda">Por favor, aguarde a finalização da demanda</string>
    <string name="iniciado_em_31_05_2016_s_13_00h">Iniciado em 31/05/2016 ás 13:00h</string>
    <string name="deixe_aqui_o_seu_coment_rio">Deixe aqui o seu comentário</string>
    <string name="avalie_o_atendimento_do_profissional">Avalie o atendimento do Profissional</string>
    <string name="ap_s_efetuar_sua_avalia_o_o_pagamento_ser_liberado_para_o_advogado_automaticamente">Após efetuar sua avaliação o pagamento será liberado para o advogado automaticamente.</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_map_list">Lista</string>
    <string name="title_activity_profile">Perfil</string>
    <string name="title_activity_proposal">Proposta de Serviço</string>
    <string name="title_activity_service_status_demand">Solicitação de Serviço</string>
    <string name="title_activity_service_status_payment">Pagamento</string>
    <string name="title_activity_service_status_chat">Chat</string>
    <string name="title_activity_service_status_delivery">Entrega</string>
    <string name="title_activity_service_status_rate">Avaliação</string>
    <string name="title_activity_service_status_ended">Serviço Finalizado</string>

    <string-array name="credit_card_flags_array">
        <item>Visa</item>
        <item>Mastercard</item>
        <item>American Express</item>
    </string-array>

</resources>
