<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.github.aakira.expandablelayout.ExpandableRelativeLayout
        android:id="@+id/terms_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ael_duration="200"
        app:ael_expanded="false"
        app:ael_interpolator="linear"
        app:ael_orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/blueDarkApp">

            <TextView
                android:text="@string/placeholder_terms_use_first_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/placeholder_terms_use_link"
                    android:background="@android:color/transparent"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textSize="16dp"
                    android:id="@+id/linkTermsUse" />

                <TextView
                    android:text="@string/placeholder_terms_use_separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textAlignment="center" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/placeholder_terms_use_privacy_policy_link"
                    android:background="@android:color/transparent"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textSize="16dp"
                    android:id="@+id/linkPrivacyPolicy" />

            </LinearLayout>

        </LinearLayout>

    </com.github.aakira.expandablelayout.ExpandableRelativeLayout>


</LinearLayout>