<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="90dp"
    android:background="@color/white"
    android:foregroundGravity="center_vertical|center_horizontal">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="89dp"
            android:weightSum="5"
            android:layout_gravity="top"
            android:background="@color/grey_100">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:layout_gravity="left|center_vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_demand_inactive"
                    android:id="@+id/demandImage"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/placeholder_demand"
                    android:id="@+id/demandDescription"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="@color/greyNotSelected"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:layout_gravity="left|center_vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_payment_inactive"
                    android:id="@+id/paymentImage"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/placeholder_payment"
                    android:id="@+id/paymentDescription"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="@color/greyNotSelected"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:layout_marginTop="5dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:src="@drawable/chat_inactive"
                    android:id="@+id/chatImage"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/placeholder_chat"
                    android:id="@+id/chatDescription"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="@color/greyNotSelected"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:layout_marginTop="5dp" />

            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:foregroundGravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|right">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_delivery_inactive"
                    android:id="@+id/deliveryImage"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/placeholder_delivery"
                    android:id="@+id/deliveryDescription"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="@color/greyNotSelected"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:layout_marginTop="5dp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:foregroundGravity="center_vertical"
                android:layout_weight="1"
                android:layout_gravity="center_vertical|right"
                android:gravity="left"
                android:baselineAligned="false">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_rate_inactive"
                    android:id="@+id/rateImage"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/placeholder_rate"
                    android:id="@+id/rateDescription"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="@color/greyNotSelected"
                    android:textStyle="bold"
                    android:textSize="12dp"
                    android:foregroundGravity="center_vertical|center_horizontal"
                    android:layout_marginTop="5dp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greyNotSelected"
            android:layout_gravity="bottom"
            android:layout_marginBottom="1dp" />

    </LinearLayout>

</RelativeLayout>