<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greyBackground"
            android:layout_gravity="center_horizontal"
            android:weightSum="3">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/greyBackground"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/placeholder_attendance"
                    android:id="@+id/textView2"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="@color/blueApp"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:paddingTop="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="70"
                    android:id="@+id/numberAttendanceTextView"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="35dp"
                    android:textColor="@color/blueLightApp"
                    android:textStyle="bold"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="18dp"
                android:background="@color/greyNotSelected"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/greyBackground"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/placeholder_evaluation"
                    android:id="@+id/textView3"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="@color/blueApp"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:paddingTop="18dp" />

                <ImageButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingButton"
                    android:src="@drawable/rating_stars_4"
                    android:background="@color/greyBackground"
                    android:paddingTop="15dp" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="18dp"
                android:background="@color/greyNotSelected"
                android:layout_marginTop="20dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/greyBackground"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/placeholder_completed"
                    android:id="@+id/textView5"
                    android:gravity="bottom|center_horizontal"
                    android:textColor="@color/blueApp"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:paddingTop="18dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="68"
                    android:id="@+id/numberCompletedTextView"
                    android:gravity="center_vertical|center_horizontal"
                    android:textSize="35dp"
                    android:textColor="@color/blueLightApp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/greyNotSelected" />

</LinearLayout>